--- a/views/index.html
+++ b/views/index.html
@@ -8,15 +8,16 @@
     </head>
     <body>
         <div>HI</div>
+        <script src="/socket.io/socket.io.js"></script>
         <script>
-            const webSocket = new WebSocket('ws://localhost:8005');
-            webSocket.onopen = function () {
-                console.log('서버와 웹 소켓 연결 성공');
-            };
-            webSocket.onmessage = function (event) {
-                console.log(event.data);
-                webSocket.send('클라이언트에서 서버로 답장을 보냅니다');
-            };
+            const socket = io.connect('http://localhost:8005', {
+                path: '/socket.io',
+                transports: ['websocket'], // polling 방식 사용 X
+            });
+            socket.on('news', (data) => {
+                console.log(data);
+                socket.emit('reply', 'Hello Node.JS');
+            });
         </script>
     </body>
 </html>
